// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qweb t-tag simple usecases 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let scope = Object.create(context);
    let result;
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let tag2 = 'div';
    let vn1 = h(tag2, p1, c1);
    result = vn1;
    return result;
}"
`;

exports[`qweb t-tag simple usecases 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let scope = Object.create(context);
    let result;
    let h = this.h;
    let c3 = [], p3 = {key:3};
    let tag4 = scope['tag'];
    let vn3 = h(tag4, p3, c3);
    result = vn3;
    c3.push({text: \`text\`});
    return result;
}"
`;

exports[`qweb t-tag with multiple attributes 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let scope = Object.create(context);
    let result;
    let h = this.h;
    let _2 = {'blueberry':true};
    let _3 = 'raspberry';
    let c4 = [], p4 = {key:4,attrs:{taste: _3},class:_2};
    let tag5 = scope['tag'];
    let vn4 = h(tag5, p4, c4);
    result = vn4;
    c4.push({text: \`gooseberry\`});
    return result;
}"
`;

exports[`qweb t-tag with multiple child nodes 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let scope = Object.create(context);
    let result;
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let tag2 = scope['tag'];
    let vn1 = h(tag2, p1, c1);
    result = vn1;
    c1.push({text: \` pear \`});
    let c3 = [], p3 = {key:3};
    let vn3 = h('span', p3, c3);
    c1.push(vn3);
    c3.push({text: \`apple\`});
    c1.push({text: \` strawberry \`});
    return result;
}"
`;
